# loja-instrumentos

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.dev  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
analytics/: apps.py  middleware.py  urls.py
authentication/: admin.py  apps.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_encrypt_cpf_field.py
authentication/tests/: test_forms.py  test_models.py  test_security.py  test_services.py  test_views.py
authentification/: apps.py  fields.py  forms.py  models.py  services.py  urls.py  views.py
authentification/migrations/: 0002_encrypt_cpf_field.py
authentification/tests/: test_forms.py  test_models.py  test_security.py  test_services.py
backend/: celery.py  context_processors.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_test.py  storage.py  urls.py
backstage/: apps.py  forms.py  urls.py
backstage/tests/: test_inventory_crud.py  test_mixins.py  test_views.py
backstage/views/: analytics.py  carousel.py  customers.py  dashboard.py  orders.py  products.py
cart/: apps.py  context_processors.py  services.py  urls.py  views.py
cart/tests/: test_services.py  test_views.py
catalog/: admin.py  apps.py  models.py  resources.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_historicalinstrument_views_count_and_more.py  0003_add_stock_movement.py  (+1 more)
changelog.d/: _template.md  add-pytest-test-suite.feature.md  add-readme.doc.md  ajustes-home-template.misc.md  backstage-dashboard.feature.md  backstage-inventory-crud.feature.md  backstage-preco-br-e-upload-imagens.bugfix.md  backstage-upload-imagens-produto.feature.md  carrossel-personalizavel.feature.md  correcoes-seguranca-high.bugfix.md  deploy-pythonanywhere.misc.md  home-page-restructure.improvement.md  orders-checkout.feature.md
docs/: backstage-imagens-produto.md  orders-checkout.md
home/: admin.py  apps.py  models.py  urls.py  views.py
manager/: apps.py  mixins.py  urls.py
musicmaisCSS/: apps.py
orders/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
theme/: apps.py
(+98 files in other folders)
